--- a/equity-trading-ui/package.json
+++ b/equity-trading-ui/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
-    "recharts": "^3.0.2"
+    "recharts": "^3.0.2",
+    "lucide-react": "^0.292.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.19",
