--- a/equity-trading-ui/package.json
+++ b/equity-trading-ui/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
     "recharts": "^3.0.2",
-    "lucide-react": "^0.292.0"
+    "lucide-react": "^0.292.0",
+    "react-table": "^7.8.0",
+    "match-sorter": "^6.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.19",
