--- a/equity-trading-ui/package.json
+++ b/equity-trading-ui/package.json
@@ -18,7 +18,8 @@
     "recharts": "^3.0.2",
     "lucide-react": "^0.292.0",
     "react-table": "^7.8.0",
-    "@tanstack/react-table": "^8.8.7"
+    "@tanstack/react-table": "^8.8.7",
+    "axios": "^1.6.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.19",
