--- a/equity-trading-ui/package.json
+++ b/equity-trading-ui/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "^0.292.0",
     "react-table": "^7.8.0",
     "@tanstack/react-table": "^8.14.1",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "match-sorter": "^6.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.19",
